[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asteria"
dynamic = ["version"]
description = "A Python package for IceCube supernova neutrino simulations"
authors = [{ name = "IceCube Collaboration", email = "sn-wg@icecube.wisc.edu" }]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
readme = {file = "README.md", content-type = "text/markdown"}

requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "pyyaml",
    "matplotlib",
    "setuptools",
    "Tables >=3.5.1",
    "snewpy>=1.6"
]

[project.optional-dependencies]
dev = ["hypothesis", "pytest"]
docs = ["numpydoc", "nbsphinx", "ipykernel", "tqdm[notebook]"]

[project.urls]
"Homepage" = "https://github.com/icecube/ASTERIA"
"Bug Tracker" = "https://github.com/icecube/ASTERIA/issues"

[tool.setuptools.dynamic]
version = {attr = "asteria.__version__"}

[tool.setuptools.packages.find]
where = ["python"]
include = [
    "asteria",
    "asteria.*",
]
exclude = [
    "asteria.scripts",
]
